helidon: working with logging and custom weld repackaged image